# supernova

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MEMORY_BANK.md  README.md  SECURITY.md  WIKI.md  config.yaml  debug_script.py  directory_restructure_plan.md  list_files.py  pyproject.toml  refactoring_summary.md  refactoring_tasklist.md  requirements-dev.txt  requirements.txt  setup.py  test_chat.py  test_tool_call.py
supernova/: __init__.py  __main__.py
supernova/cli/: chat_session.py  error_handler.py  llm_interface.py  main.py  session_manager.py  tool_handler.py  tools_command.py  ui_manager.py  ui_utils.py
supernova/cli/chat/: __init__.py
supernova/cli/chat/config/: config_manager.py
supernova/cli/chat/domain/: models.py
supernova/cli/chat/message/: __init__.py  message_manager.py  message_models.py
supernova/cli/chat/prompt/: __init__.py  prompt_generator.py
supernova/cli/chat/session/: __init__.py  chat_session.py  session_state.py
supernova/cli/chat/tool/: __init__.py  tool_call_processor.py
supernova/cli/chat/ui/: __init__.py  chat_ui.py
supernova/cli/chat/utils/: formatting.py
supernova/config/: loader.py  schema.py
supernova/core/: command_executor.py  command_runner.py  context_analyzer.py  llm_provider.py  tool_base.py  tool_manager.py
supernova/extensions/: example_tool.py  file_create_tool.py  file_edit_tool.py  file_info_tool.py  file_search_tool.py  file_stats.py  folder_search_tool.py
supernova/integrations/: git_utils.py  vscode_integration.py
supernova/persistence/: db_manager.py
supernova/tools/: file_reference_tool.py  terminal_command_tool.py
tests/: __init__.py  conftest.py
tests/cli/chat/config/: test_config_manager.py
tests/integration/: __init__.py  test_cli.py
tests/unit/: __init__.py
tests/unit/cli/: __init__.py  test_chat_session.py  test_chat_session_file_references.py  test_tool_call_processing.py
tests/unit/cli/chat/: __init__.py  test_chat_session.py
tests/unit/config/: __init__.py  test_loader.py  test_schema.py
tests/unit/core/: __init__.py  test_command_runner.py  test_context_analyzer.py  test_llm_provider.py  test_tool_base.py  test_tool_manager.py
tests/unit/persistence/: __init__.py  test_db_manager.py
tests/unit/tools/: __init__.py  test_file_reference_tool.py  test_terminal_command_tool.py  test_tools_registration.py
vscode/: README.md  errorHandler.js  extension.js  package.json
